--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "external/freetype"]
 	path = external/freetype
 	url = https://github.com/krkrz/freetype.git
+	ignore = dirty
 [submodule "external/ncbind"]
 	path = external/ncbind
 	url = https://github.com/uyjulian/ncbind.git
